# gss-utils

./: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile-k8s  Jenkinsfile-scrapers  Makefile  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  updateCsvcubedPackage.yaml
csvcubedintegrationfeatures/: infojson.feature  infojson2csvw.feature  infojsondatatypes.feature
csvcubedintegrationfeatures/steps/: infojson.py  infojson2csvw.py
features/: codelist-manager.feature  csvw.feature  distribution.feature  pmd.feature  scrape.feature  transform-fixtures.feature
features/fixtures/: business-characteristics-data-tables.csv  business_char_mapping.json  seed-for-api-scraper-pmd4.json  seed-for-api-scraper.json
features/steps/: csvw.py  download.py  pmd.py  rdf.py  scrape.py  transform-fixtures.py
fixtures/: recording.yml
gssutils/: __init__.py  scrape.py  utils.py
gssutils/codelistmanager/: applyupdates.py  createnew.py
gssutils/codelistmanager/updates/: escape_uri_template_values.py
gssutils/csvcubedintegration/: __init__.py
gssutils/csvcubedintegration/configloaders/: AttributeColumns.md  DimensionColumns.md  MeasuresColumns.md  README.md  (+4 more)
gssutils/csvw/: cmd.py  dsd.py  mapping.py
gssutils/metadata/: __init__.py  base.py  dcat.py  mimetype.py  pmdcat.py
gssutils/scrapers/: __init__.py  defra.py  govuk.py  helpers.py  ni_govuk.py  nrscotland.py  ons.py  statswales.py
gssutils/transform/: cubes.py  download.py
unittests/configloaders/: test_infojson1point1.py  test_infojsontests.py  test_json_schema_validation.py
(+25 files in other folders)
